<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="acra.prod">https://vzm.pdi.vzw.com/acra/acra/</string>
	<string name="acra.dev">http://report.flockthere.com/acra/err/</string>
    <string name="hello">Messaging</string>
    <string name="conversation_list_header_txt">VERIZON MESSAGES</string>
    <string name="save_folder_name">VZMessages</string>
    <string name="app_label">Verizon Messages</string>
    <string name="app_name">Verizon Messages</string>
    <string name="desc">Image</string>
    <string name="new_message">New Message</string>
    <string name="new_messages">New Messages</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_call_back">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_send_email">Send email to <xliff:g id="name">%s</xliff:g></string>
    <string name="send_email">Send Email </string>
    <string name="nosharedcontent">Photos, videos, links, locations and contact information that are shared between you and <xliff:g id="name">%s</xliff:g> will appear here.</string>
    <string name="fetching_content">Fetching shared content</string>
    <string name="updating_content">Updating shared content</string>
    <string name="location_image_not_found">There was no location data within the image</string>
    <string name="invalid_filetype_location">The file is not supported</string>
    <string name="media_content_cursor_bad_operation">Invalid cursor returned</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="drop_pin">Drop Pin</string>
    <string name="location_carrier_invalid_title">Not Supported</string>
    <string name="location_carrier_invalid_message">This app is only supported on Verizon Wireless devices.</string>
    <string name="location_carrier_invalid_button">Go back</string>
    <string name="wifi_probe_title">Improve Location</string>
    <string name="wifi_probe_dialog">To improve features and functionality of services provided to you by Verizon Wireless and its content providers, this application may collect anonymous information on your nearby Wi-Fi Access Points. By selecting "Accept" you consent to the collection, use and disclosure of this Wi-Fi data which will not be associated with you in anyway, otherwise select "Decline" to continue.</string>
    <string name="wifi_probe_accept">Accept</string>
    <string name="wifi_probe_decline">Decline</string>
    <string name="please_wait_token">Searching for %s.\nPlease wait...</string>
    <string name="please_wait">Searching.\nPlease wait...</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add <xliff:g id="name">%s</xliff:g> to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_delete_all">Delete Conversations</string>
    <string name="menu_batch_mode">Batch Mode</string>
    <string name="n_entries">%1$d Entries</string>
    <string name="menu_tips">Tips and Reminders</string>
    <string name="tip1">Running multiple SMS/MMS messaging applications on your phone may impact performance, such as causing  notifications to disappear, disrupting the group conversation experience, and altering message timestamps. For the best messaging experience, we recommend only one SMS/MMS messaging app be installed and running on your device.</string>
    <string name="tip2">You can avoid getting multiple notifications about the same message by turning off Notifications in the messaging apps you don’t use.</string>
    <string name="tip3">Limited memory can slow down your phone, especially if you text a lot. From your phone’s Settings menu, tap Applications > Running Services to check available memory. If you have less than 50 MB free, try stopping apps that you are not currently using.</string>
    <string name="tip4">You can back up your messages by saving specific conversations or saving all of your messages by selecting “Save Conversations” or “Settings > Save Messages” from the Verizon Messages app menu. Messages will be saved to your SD card.</string>
    <string name="tip5">Integrated Messaging features can be found in the app\'s Settings.</string>
    <string name="tip6">For smoother syncing, copy all of the contacts from your phone’s address book to your tablet.</string>
    <string name="menu_tips_and_reminders_msg">- For best performance and usability it\'s recommended to run only one downloaded SMS messaging application in addition to the stock messaging client. Ensure that the stock client is not running.\n\n
- For improved speed and performance, especially as a heavy messaging user, ensure that your device has sufficient memory (~50M). Go to Settings/Applications/Running Services to check memory and free up memory from applications you are no longer using day-to-day.\n\n
- If running more than one messaging application, avoid multiple notifications for the same message by disabling this feature in seldom used messaging applications.\n\n
- Periodically back up your messages using batch mode "Save Messages" in the application menu.\n\n
- When pairing devices and syncing messages, ensure that devices are on the same local network (Wi-Fi, Mobile Hotspot).\n\n
- Make sure that auto-retrieve is set to ON in Message Settings/Multimedia Message Setting and MMS messages are fully downloaded to your device so that they will appear on your tablet after message synchronization.\n\n
- If device pairing is still not working after confirming that both devices are on the same local area network (Wi-Fi, Mobile Hotspot), try resetting your connection by turning it OFF and ON. Once both devices are connected try pairing again.\n\n
- It is recommended to copy all contacts from the handset\'s address book to the tablet for improved tablet sync functionality.\n\n</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="pref_mms_settings_title">"Multimedia message (MMS) settings"</string>
    <string name="pref_summary_delivery_reports">Request a delivery receipt and read receipt for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit"><xliff:g id="count">%1$s</xliff:g> messages per conversation</string>
    <string name="pref_title_delivery_reports">Request receipt</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Display message notifications in status bar</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="prefDefault_vibrateWhen" translatable="false">silent</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="pref_title_notification_ledColourWhen">LED Color</string>
    <string name="pref_summary_notification_ledColourWhen">Color of LED when notified</string>
    <string name="prefDialogTitle_ledColourWhen">LED Color</string>
    <string name="pref_title_notification_fontSupport">Font Style</string>
    <string name="prefDefault_fontSupport" translatable="false">System Default</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="pref_title_manage_auto_signature">Auto Signature</string>
	<string name="pref_summary_manage_auto_signature">Signature contents</string>
	<string name="pref_title_enable_auto_signature">Enable Signature</string>
	<string name="pref_summary_enable_auto_signature">Add a personal signature to your messages</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="pref_wifi_probe_enabled">Turn on Wi-Fi Probe for Location Setting</string>
    <string name="wifi_proble_title">Improve Location</string>
    <string name="advance_preferences_title">Advanced Settings</string>
    <string name="pref_application_settings">Application Settings</string>
    <string name="pref_advance">Advanced</string>
    <string name="pref_location_settings_title">Location Settings</string>
    <string name="pref_title_language_selection">Language</string>
    <string name="pref_title_all_conv_delete">Conversation message limit</string>
    <string name="pref_title_notifications_during_phone_call">Notifications during call</string>
    <string name="pref_summary_notifications_during_phone_call">Disable audible/vibrate notification while on phone call</string>
    <string name="pref_summary_weblick_preview">Fetch webpage previews of shared hyperlinks</string>
    <string name="pref_title_weblick_preview">Enable Weblink Preview</string>
    <string name="btn_start_sharing">Start Sharing</string>
    <string name="gallery_all">All</string>
    <string name="gallery_photos_videos">Photos &amp; Videos</string>
    <string name="gallery_locations">Locations</string>
    <string name="gallery_links">Links</string>
    <string name="gallery_contact_info">Contact Info</string>
    <string name="pref_summary_readreport_always">Always respond to read receipt requests</string>
    <string name="pref_title_readreport">Send Read Receipts</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="customize_bg_color">Change Background Color</string>
    <string name="customize_bubble_color">Change Bubble Colors &amp; Order</string>
    <string name="pref_customize_settings_title">Customization</string>
    <string name="pref_title_conversation_view">Conversation Screen</string>
    <string name="pref_summary_conversation_view">Change bubble and background colors</string>
    <string name="pref_popup_title">Enable Popup</string>
    <string name="pref_readmsg_summary">Upon closing the popup window, messages will be marked as read.</string>
    <string name="pref_readmsg_title">Mark As Read On Close</string>
    <string name="pref_popup_summary">A popup will appear when a new message arrives.</string>
    <string name="vma_deprovisioning_confirmation">Unsubscribing will stop the Integrated Messaging service from syncing your messages and will remove them from My Verizon.The original messages will stay on your devices.</string>
    <string name="vma_features">Integrated Messaging Features</string>
    <string name="vma_manage_device_title">Manage Devices</string>
    <string name="vma_manage_device_desc">Disconnect your devices to stop syncing with Integrated Messaging.</string>
    <string name="vma_auto_reply">Auto Reply</string>
    <string name="vma_reply_summary">Auomatically send a reply message to incoming messages.</string>
    <string name="vma_delete_account">Unsubscribe </string>
    <string name="vma_wifi_title">Sync Over Wi-Fi Only</string>
    <string name="vma_wifi_summary">Sync your messages to this device only when connected to Wi-Fi</string>
    <string name="vma_show_getStarted">Get Started with Integrated Messaging</string>
	 <string name="vma_paired_account">Paired Account</string>
	<string name="vma_disconnect_tablet">Disconnect Device</string>
	<string name="vma_disconnect_table_summary">Disconnect your device to stop syncing with Integrated Messaging</string>
</resources>