<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="preference_screen">

    <PreferenceCategory
        android:key="pref_key_customize_settings"
        android:title="@string/pref_customize_settings_title" >
        <Preference
            android:key="pref_key_conversation_view"
            android:persistent="false"
            android:summary="@string/pref_summary_conversation_view"
            android:title="@string/pref_title_conversation_view" />
    </PreferenceCategory>
   
    <PreferenceCategory
        android:key="pref_key_application_settings"
        android:title="@string/pref_application_settings" >
   
                       
        <ListPreference
            android:defaultValue="@string/prefDefault_fontSupport"
            android:dialogTitle="@string/pref_title_notification_fontSupport"
            android:entries="@array/prefEntries_fontsupport"
            android:entryValues="@array/prefValues_fontsupport"
            android:key="pref_key_fontsupport"
            android:title="@string/pref_title_notification_fontSupport" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_enable_notifications"
            android:summary="@string/pref_summary_notification_enabled"
            android:title="@string/pref_title_notification_enabled" />
        
        <ListPreference
            android:dependency="pref_key_enable_notifications"
            android:dialogTitle="@string/prefDialogTitle_ledColourWhen"
            android:entries="@array/prefEntries_ledColourWhen"
            android:entryValues="@array/prefValues_ledColourWhen"
            android:key="pref_key_led_colour"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_notification_ledColourWhen"
            android:title="@string/pref_title_notification_ledColourWhen" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="pref_key_enable_notifications"
            android:key="pref_key_ringtone"
            android:layout="?android:attr/preferenceLayoutChild"
            android:ringtoneType="notification"
            android:title="@string/pref_title_notification_ringtone" />

        <ListPreference
            android:defaultValue="@string/prefDefault_vibrateWhen"
            android:dependency="pref_key_enable_notifications"
            android:dialogTitle="@string/prefDialogTitle_vibrateWhen"
            android:entries="@array/prefEntries_vibrateWhen"
            android:entryValues="@array/prefValues_vibrateWhen"
            android:key="pref_key_vibrateWhen"
            android:layout="?android:attr/preferenceLayoutChild"        
            android:title="@string/pref_title_notification_vibrateWhen" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_popup"
            android:summary="@string/pref_popup_summary"
            android:title="@string/pref_popup_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_enable_popup"
            android:key="pref_key_markas_readmsg"
            android:summary="@string/pref_readmsg_summary"
            android:title="@string/pref_readmsg_title" />

        

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mms_auto_response_read_reports"
            android:summary="@string/pref_summary_readreport_always"
            android:title="@string/pref_title_readreport" />
        
       <com.verizon.mms.ui.widget.LanguageListPreference
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:key="pref_key_language_change"
            android:title="@string/pref_title_language_selection" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_auto_signature_enable"
            android:summary="@string/pref_summary_enable_auto_signature"
            android:title="@string/pref_title_enable_auto_signature" />
        
        <Preference
            android:dependency="pref_key_auto_signature_enable"
            android:key="pref_key_auto_signature"
            android:layout="?android:attr/preferenceLayoutChild"
            android:persistent="false"
            android:summary="@string/pref_summary_manage_auto_signature"
            android:title="@string/pref_title_manage_auto_signature" />
        
    </PreferenceCategory>
    <!--  
     <PreferenceCategory
        android:key="pref_pairing_device"
        android:title="@string/pref_device_pairing"
        >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_enable_wifi"
            android:summary="@string/wifi_sync_summary"
            android:title="@string/pref_wifi_enabled" />
     </PreferenceCategory>
    -->
    <PreferenceCategory
        android:key="pref_key_vma_features"
        android:title="@string/vma_features" >
        
       <!--  <Preference
            android:key="pref_key_auto_forward"
            android:persistent="false"
            android:title="@string/vma_auto_forward" 
            android:summary="@string/vma_forward_summary"/> -->
        
        <Preference
            android:key="pref_key_paired_account"
            android:persistent="false"
            android:summary=""
            android:title="@string/vma_paired_account" />
        
        <Preference
            android:key="pref_key_auto_reply"
            android:persistent="false"
            android:title="@string/vma_auto_reply" 
            android:summary="@string/vma_reply_summary"/>
        <Preference
            android:key="pref_key_deregister"
            android:persistent="false"
            android:title="@string/vma_disconnect_tablet" 
            android:summary="@string/vma_disconnect_table_summary"/>
        
        <Preference
            android:key="pref_key_manage_device"
            android:persistent="false"
            android:summary="@string/vma_manage_device_desc"
            android:title="@string/vma_manage_device_title" />
        
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="vma.usewifi"
            android:persistent="true"
            android:summary="@string/vma_wifi_summary"
            android:title="@string/vma_wifi_title" />
         <Preference
            android:key="vma.deprovision"
            android:summary="@string/vma_deprovisioning_confirmation"
            android:title="@string/vma_delete_account" />
         
         
       
    </PreferenceCategory>     
     <PreferenceCategory
        android:key="pref_key_advance_setting"
        android:title="@string/advance_preferences_title" >
        <Preference
            android:key="pref_key_advance"
            android:title="@string/pref_advance" />
    </PreferenceCategory>

</PreferenceScreen>