<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_customize_settings"
        android:title="@string/pref_customize_settings_title" >
        <Preference
            android:key="pref_key_customize_bg_colr"
            android:persistent="false"
            android:title="@string/customize_bg_color" />
        <Preference
            android:key="pref_key_customize_bubble_color"
            android:persistent="false"
            android:title="@string/customize_bubble_color" />
        <Preference
            android:key="pref_key_reset_default"
            android:persistent="false"
            android:title="@string/reset_to_default" />
    </PreferenceCategory>
</PreferenceScreen>
