<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:background="@color/black"
	android:orientation="vertical" >

	<include layout="@layout/shared_content_header" />

	<RelativeLayout
		android:id="@+id/tabletgallery"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone" >

		<ListView
			android:id="@+id/tabletgallery_list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_alignParentTop="true"
			android:layout_above="@+id/tabletgallery_bottom_panel"
			android:layout_alignWithParentIfMissing="true"
			android:background="@color/black"
			android:cacheColorHint="@android:color/transparent" />
		
		<LinearLayout
            android:id="@+id/tabletgallery_bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_bar"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <Button
                android:id="@+id/btn_gallery_all"
                android:layout_width="wrap_content"
                android:layout_height="42.18dp"
                android:background="@drawable/btn_bkgd_gray"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:singleLine="true"
                android:text="@string/gallery_all" 
                style="?textButton"/>

            <Button
                android:id="@+id/btn_gallery_photos_videos"
                android:layout_width="wrap_content"
                android:layout_height="42.18dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/btn_bkgd_gray"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:singleLine="true"
                android:text="@string/gallery_photos_videos" 
                style="?textButton"/>

            <Button
                android:id="@+id/btn_gallery_locations"
                android:layout_width="wrap_content"
                android:layout_height="42.18dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/btn_bkgd_gray"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:singleLine="true"
                android:text="@string/gallery_locations" 
                style="?textButton"/>

            <Button
                android:id="@+id/btn_gallery_links"
                android:layout_width="wrap_content"
                android:layout_height="42.18dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/btn_bkgd_gray"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:singleLine="true"
                android:text="@string/gallery_links" 
                style="?textButton"/>

            <Button
                android:id="@+id/btn_gallery_contact_info"
                android:layout_width="wrap_content"
                android:layout_height="42.18dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/btn_bkgd_gray"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:singleLine="true"
                android:text="@string/gallery_contact_info" 
                style="?textButton"/>
        </LinearLayout>

		<RelativeLayout
			android:id="@+id/updating"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#80000000"
			android:gravity="center"
			android:clickable="true"
			android:visibility="gone" >

			<TextView
				android:id="@+id/updating_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:textColor="@android:color/white"
				style="?textButton"
				android:text="@string/updating_content" />

			<ProgressBar
				style="?android:attr/progressBarStyleInverse"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_below="@id/updating_text"
				android:layout_marginTop="20dp"
				android:visibility="visible" />

		</RelativeLayout>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/tabletgallery_nocontent"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#DADADA"
		android:visibility="gone" >

		<ImageView
			android:id="@+id/attachment_thumb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="70dp"
			android:contentDescription="@string/desc"
			android:src="@drawable/img_empty_media_panel" />

		<TextView
			android:id="@+id/screen_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/attachment_thumb"
			android:layout_centerHorizontal="true"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="35dp"
			android:gravity="center"
			android:textColor="#333333"
			style="?sendButtonText" />

		<com.verizon.mms.ui.widget.TextButton
			android:id="@+id/startsharing"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/screen_description"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="30dp"
			android:textColor="#000000"
			android:text="@string/btn_start_sharing"
			style="?textButton"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:background="@drawable/btn_start_sharing"/>

	</RelativeLayout>

</LinearLayout>