<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/conversation_background">

    <TextView
        android:id="@+id/headerlayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/headerHeight"
        android:background="@drawable/bg_header1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:singleLine="false"
        android:text="@string/customize_bg_color"
        android:textColor="#FFFFFF"
        android:maxLines="3"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true" 
        android:orientation="horizontal">
		<com.verizon.mms.ui.widget.TextButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/btn_create_message"
            android:gravity="center"
            android:layout_marginTop="11dp"
            android:text="@string/cancel_label"
            android:textColor="#000000"
            style="?textButton"
            android:textStyle="bold" />
		
        <com.verizon.mms.ui.widget.TextButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/btn_create_message"
            android:gravity="center"
            android:layout_marginTop="11dp"
            android:text="@string/save_label"
            android:textColor="#000000"
            style="?textButton"
            android:textStyle="bold" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_margin="3dp"
        android:max="70"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:progress="40" />

    <ListView
        android:id="@+id/convList"
        style="?android:attr/listViewWhiteStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/seekbar"
        android:layout_below="@+id/headerlayout"
        android:background="@drawable/conversation_background"
        android:cacheColorHint="@color/transparent"
        android:drawSelectorOnTop="true"
        android:fadingEdge="none"
        android:listSelector="@color/transparent"
        android:paddingBottom="@dimen/interMessageMargin"
        android:scrollbars="none"
        android:divider="@null"/>

</RelativeLayout>